src/styles.css
* {
  font-family: 'Cabin', sans-serif;
}

.hidden {
  display: none;
}

header {
  background-color: #A0C4FF;
  padding: 1em;
}

.search-section {
  text-align: right;
}

.title-menu {
  display: flex;
  justify-content: space-between;
}

h1 {
  margin: 0px;
  padding: 0px; 
  font-size: 38px;
}

nav {
  padding-top: 3em;
}

.dropdown-menu {
  position: relative;
  display: inline-block; 
}

.dropdown-btn {
  background-color: #A0C4FF;
  color: black;
  border: none;
  font-size: 20px;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #CAFFBF;
  font-size: 16px;
  width: 100%;
}

.dropdown-content a {
  display: block;
  padding: 5px;
  text-decoration: none;
  color: black;
}

.dropdown-menu:hover .dropdown-content {
  display: block; 
}

.dropdown-content a:hover {
  background-color: #b4e3aa;
}

h2 {
  text-align: center; 
  padding-top: 1em;
  font-size: 28px;
}

.recipe-cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 4em; 
  margin: 4em; 
  padding-bottom: 4em;
}

.recipe-card {
  border: 1px solid grey; 
  height: 18em; 
  border-radius: 5%;
  background-color: #FFADAD;
  box-shadow: 3px 3px 10px grey; 
}

.recipe-card:hover, .recipe-card:focus, .recipe-card:active {
  -webkit-transform: scale(1.05);
  transform: scale(1.05);
}

.recipe-img {
  height: 75%;
  background-size: cover;
  border-top-left-radius: 5%;
  border-top-right-radius: 5%;
}

.heart-icon, .cook-icon {
  text-align: right;
  padding: 0.5em;
}

h5 {
  font-size: 16px;
  text-align: center;
}

.single-recipe-view, .list-view {
  margin-top: 3em;
  text-align: center;
}

.recipe-details, .list {
  width: 72%;
  border: 2px solid black;
  background-color: #f8f8ff;
  opacity: 0.8;
  display: inline-block;
  padding-right: 2em;
  padding-left: 2em;
}

.list {
  text-align: left;
}

.recipe-name {
  text-align: left;
  font-size: 32px;
}

.recipe-name-ingredients {
  display: flex;
  justify-content: space-between;
}

.ingredients-box {
  border: 1px dotted black;
  width: 100%;
  margin-right: 2em;
  text-align: left;
  padding-left: 1em;
}

.recipe-instructions {
  text-align: left;
  padding-left: 1.5em;
}

.list-items {
  font-size: 18px;
}

.grocery-cost {
  margin-top: 1em; 
  text-align: left;
  border: 2px solid black;
  display: inline-block;
  height: auto; 
  background-color: #FFADAD;
}

.cost-text {
  padding-left: 1em;
  padding-right: 1em; 
  text-align: left;
  font-weight: bolder; 
}

